<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_30dp"
    android:paddingRight="@dimen/pad_30dp"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/field_name"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/field_number"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:inputType="phone"
        android:hint="@string/phone_number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/field_email"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/field_password"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/field_confirm_password"
        style="@style/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/button_sign_in"
        style="@style/uza_button_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_30dp"
        android:text="@string/sign_in" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/uza_button_black"
        android:layout_gravity="center_horizontal"
        android:paddingTop="18sp"
        android:paddingStart="30sp"
        android:paddingBottom="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="@color/main_color_dk" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_20dp" >

        <Button
            android:id="@+id/btnForget"
            style="@style/btn_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/forget_pwd" />

        <Button
            android:id="@+id/btnReg"
            style="@style/btn_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/sign_up" />
    </LinearLayout>
</LinearLayout>
