<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bikeko</string>
    <string name="favourites">Favourite(s)</string>


    <string name="sign_in">Sign in</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
...
